# citation-file-format

./: .gitignore  .pre-commit-hooks.yaml  flake.nix  pyproject.toml
.github/workflows/: testing.yml
examples/: validator.py
