[tool.poetry]
name = "citation-file-format"
version = "1.2.0"
description = "The Citation File Format lets you provide citation metadata for software or datasets in plaintext files that are easy to read by both humans and machines."
authors = ["Your Name <you@example.com>"]
license = "Creative Commons Attribution 4.0 International"
readme = "README.md"
packages = [{include = "examples"}]
include = ["schema.json"]

[tool.poetry.dependencies]
python = "^3.8"
jsonschema = "^4.17.3"
ruamel-yaml = "^0.17.21"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
cffconvert = ">=1.0.0,<2.0.0"
bump2version = "^1.0.1"

[tool.poetry.scripts]
validate-citation-file-format = "examples.validator:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
